# yyrpc

./: CMakeLists.txt  README.md  async_result.h  call_manager.cpp  call_manager.h  id_generator.h  method.h  msgpacktest.cpp  property.h  serialization.h  source.cpp  typecheck.h  yyrpc.h
client_test/: CMakeLists.txt  client.cpp  client.h  config.cfg  fiber_client_bench.cpp  fiber_client_bench.h  main.cpp  thread_client_bench.cpp  thread_client_bench.h
name_center/: CMakeLists.txt  config.cfg  event_manager.cpp  event_manager.h  main.cpp  server.cpp  server.h  service_config.cfg  service_manager.cpp  service_manager.h  service_setting.cpp  service_setting.h
proto/: common_api.h  test_api.h
server_test/: CMakeLists.txt  config.cfg  main.cpp  server.cpp  server.h
src/: CMakeLists.txt  async_result.h  buff_stream.h  buff_stream.inl  build_config.h  callback.h  callee_manager.cpp  callee_manager.h  caller_manager.cpp  caller_manager.h  error_def.cpp  error_def.h  event.h  event.inl  id_generator.cpp  id_generator.h  index_sequence.hpp  method.h  method.inl  orpc.h  property.h  rpc_application.cpp  rpc_application.h  serialization.h  unserialization.h  yyrpc.cpp  yyrpc.h
src/acceptor/: acceptor.h  rpc_client_accept.cpp  rpc_client_accept.h  tcp_acceptor.cpp  tcp_acceptor.h
src/endpoint/: endpoint.cpp  endpoint.h  endpoint_manager.cpp  endpoint_manager.h
src/json/: convert_def.h  json2msgpack.cpp  json2msgpack.h  msgpack2json.cpp  msgpack2json.h  param2msgpack.cpp  param2msgpack.h
src/listenpoint/: listenpoint.cpp  listenpoint.h  listenpoint_manager.cpp  listenpoint_manager.h  rpc_client_accept.cpp  rpc_client_accept.h
src/marshal/: serialization.cpp  serialization.h  serialization.inl  unserialization.cpp  unserialization.h  unserialization.inl
src/packet/: packet.cpp  packet.h  tcp_packet_callback.h  tcp_packet_decoder.cpp  tcp_packet_decoder.h
src/stub/: call_result.h  call_result.inl  callback.h  callback.inl  callee_manager.cpp  callee_manager.h  caller_manager.cpp  caller_manager.h  connection_monitor.cpp  connection_monitor.h  fiber_callee_manager.cpp  fiber_callee_manager.h  fiber_caller_manager.cpp  fiber_caller_manager.h  method_auth.cpp  method_auth.h
src/thread/: thread_worker.cpp  thread_worker.h
src/transport/: protocal_def.h  rpc_tcp_client_transport.cpp  rpc_tcp_client_transport.h  rpc_tcp_server_transport.cpp  rpc_tcp_server_transport.h  tcp_client_transport.cpp  tcp_client_transport.h  tcp_server_transport.cpp  tcp_server_transport.h  tcp_sync_client_transport.cpp  tcp_sync_client_transport.h  transport.h
src/type_traits/: function_traits.h  is_container.h  property.h
src/util/: base_util.cpp  base_util.h  fixed_memory_pool.h  ini.hpp  thread_safe_list.h
src/worker/: client_worker.cpp  client_worker.h  client_worker_pool.cpp  client_worker_pool.h  server_worker.cpp  server_worker.h  server_worker_pool.cpp  server_worker_pool.h
test/: main.cpp  test.cpp  test.h  testapi.h
thrift_benchmark/: Makefile  ping.cpp  ping.h  ping.thrift  ping_client.cpp  ping_constants.cpp  ping_constants.h  ping_server.cpp  ping_server.skeleton.cpp  ping_types.cpp  ping_types.h  thread_ping_server.cpp
type_traits/: function_traits.h  is_container.h
yyrpc_python/: env.sh
yyrpc_python/msgpackrpc/transport/: tcp.py
